# torch-pilco

./: Dockerfile  LICENSE  README.md  compose.yml  pilco_testing.py  pyproject.toml
notebooks/: Untitled.ipynb  cast_to_env.ipynb  pendulum.ipynb
src/torch_pilco/: pendulum.py  rewards.py
src/torch_pilco/model_learning/: dynamical_models.py
src/torch_pilco/policy_learning/: controllers.py  fit_controller.py  rbf_layer.py  rollout.py
